Changes from Version 0.15-5 to 0.15-6 [17-Oct-2011]

* Compiler error thrown on some systems due to changes in
  Eval_Point.hpp corrected

Changes from Version 0.15-4 to 0.15-5 [16-Oct-2011]

* Thanks to Professor Brian Ripley, additional Solaris C/C++ compiler
  warnings/issues have been resolved

* Some internal changes for soon to be deprecated functionality
  (sd(<matrix>) expected to be deprecated shortly)

Changes from Version 0.15-3 to 0.15-4 [15-Oct-2011]

* Extended the gsl.bs functionality to permit out-of-sample prediction
  of the spline basis and its derivatives

* Added option knots="auto" to automatically determine via
  cross-validation whether to use quantile or uniform knots

* Minor changes to help page examples and descriptions and to the crs
  vignette

Changes from Version 0.15-2 to 0.15-3 [05-Sep-2011]

* Fixed glitch when all degrees are zero when computing the
  cross-validation function (also fixes glitch when all degrees are
  zero when plotting the partial surfaces)

* Added new function crssigtest (to be considered in beta status until
  further notice)

* Added F test for no effect (joint test of significance) in crs
  summary

* Both degree and segments now set to one for first multistart in crs
  (previously only degree was, but intent was always to begin from a
  linear model (with interactions where appropriate) so this glitch is
  corrected)

* Test for pathological case in npglpreg when initializing bandwidths
  where IQR is zero but sd > 0 (for setting robust sd) which occurs
  when there exist many repeated values for a continuous predictor

* Added `typical usage' preformatted illustrations for docs

Changes from Version 0.15-1 to 0.15-2 [30-Jul-2011]

* Renamed COPYING file to COPYRIGHTS

Changes from Version 0.15-0 to 0.15-1 [29-Jul-2011]

* Automated detection of ordered/unordered factors implemented

* Initial degree values set to 1 when conducting NOMAD search (only