@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-6
-Date: 2011-10-21
+Date: 2011-10-24
 Depends:
 Suggests: np, rgl, quadprog
 Title: Categorical Regression Splines
